# ZweigDungeon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ZweigDungeon.sln  design.odt
ZweigDungeon/: Application.cs  Program.cs  ZweigDungeon.csproj
ZweigDungeon.Application/: App.cs  FileConfig.cs  Game.cs  Program.cs  ZweigDungeon.Application.csproj
ZweigDungeon.Application/Entities/: CurrentMenu.cs  CurrentScene.cs  NamedEnum.cs
ZweigDungeon.Application/Gui/: BasicMenu.cs  BasicPanel.cs  BasicPopup.cs
ZweigDungeon.Application/Manager/: FontManager.cs
ZweigDungeon.Application/Screen/: Layout.cs
ZweigDungeon.Common/Constants/: KeyboardKey.cs  MouseButton.cs
ZweigDungeon.Common/Services/: ServiceConfiguration.cs  ServiceProvider.cs  ServiceProviderExtensions.cs
ZweigDungeon.Common/Utility/: StreamExtensions.cs
ZweigDungeon.Common/Video/: VideoColor.cs  VideoRect.cs
ZweigDungeon.Native.OpenGL/: OpenGLContext.cs  OpenGLImage.cs  OpenGLSpriteModel.cs  OpenGLSpriteShader.cs  OpenGLSurface.cs  ZweigDungeon.Native.OpenGL.csproj
ZweigDungeon.Native.OpenGL/Backend/: OpenGLArrayBackend.cs  OpenGLFrameBufferBackend.cs  OpenGLModelBackend.cs  OpenGLQueryBackend.cs  OpenGLShaderBackend.cs  OpenGLStateBackend.cs  OpenGLTextureBackend.cs
ZweigDungeon.Native.OpenGL/Constants/: OpenGLBlendDestinationFactor.cs  OpenGLBlendSourceFactor.cs  OpenGLBufferTarget.cs  OpenGLBufferUsage.cs  OpenGLClearMask.cs  OpenGLCullFaceMode.cs  OpenGLDepthFunction.cs  OpenGLEnableCap.cs  OpenGLErrror.cs  OpenGLFrameBufferAttachment.cs  OpenGLFrameBufferStatus.cs  OpenGLFrameBufferTarget.cs  OpenGLFrontFaceMode.cs  OpenGLProgramProperty.cs  OpenGLQueryParameter.cs  OpenGLQueryTarget.cs  OpenGLRenderBufferFormat.cs  OpenGLRenderBufferTarget.cs  OpenGLShaderProperty.cs  OpenGLShaderType.cs  OpenGLTextureComponentFormat.cs  OpenGLTextureDataType.cs  OpenGLTextureInternalFormat.cs  OpenGLTextureParameter.cs  OpenGLTextureParameterName.cs  OpenGLTextureTarget.cs  OpenGLTextureUnit.cs  OpenGLTextureUploadTarget.cs  OpenGLVertexDataType.cs  OpenGLVertexMode.cs
ZweigDungeon.Native.OpenGL/Handles/: AbstractOpenGLHandle.cs  OpenGLArrayHandle.cs  OpenGLBufferHandle.cs  OpenGLFragmentShaderHandle.cs  OpenGLFrameBufferHandle.cs  OpenGLProgramHandle.cs  OpenGLQueryHandle.cs  OpenGLRenderBufferHandle.cs  OpenGLTexture2DHandle.cs  OpenGLVertexArrayHandle.cs  OpenGLVertexBufferHandle.cs  OpenGLVertexShaderHandle.cs
ZweigDungeon.Native.OpenGL/Managers/: OpenGLModelManager.cs  OpenGLShaderManager.cs  OpenGLStateManager.cs  OpenGLTextureManager.cs
ZweigDungeon.Native.OpenGL/Prototypes/: OpenGLArrayFunctions.cs  OpenGLBufferFunctions.cs  OpenGLFrameBufferFunctions.cs  OpenGLQueryFunctions.cs  OpenGLShaderFunctions.cs  OpenGLStateFunctions.cs  OpenGLTextureFunctions.cs
ZweigDungeon.Native.OpenGL/Renderer/: OpenGLSpriteModel.cs  (+2 more)
ZweigDungeon.Native.Win32/: IWin32WindowComponent.cs  Win32AudioDevice.cs  Win32Keyboard.cs  Win32Mouse.cs  Win32OpenGLDevice.cs  Win32SynchronizationContext.cs  Win32Window.cs  ZweigDungeon.Native.Win32.csproj
ZweigEngine.Image/: IImageInfo.cs  IImageReader.cs  ImagePixelFormat.cs  StreamExtensions.cs
ZweigEngine.Native.DirectX/: D3D11Backend.cs  D3D11Surface.cs
ZweigEngine.Native.OpenGL/: OpenGLBackend.cs  OpenGLContext.cs  OpenGLImage.cs  ZweigEngine.Native.OpenGL.csproj
ZweigEngine.Native.OpenGL.Win32/: Win32OpenGLSurface.cs  ZweigEngine.Native.OpenGL.Win32.csproj
ZweigEngine.Native.Win32/: D3D11VideoContext.cs  D3D11VideoDevice.cs  IWin32WindowComponent.cs  Win32Audio.cs  Win32AudioDevice.cs  Win32DpiScalingConfig.cs  Win32Keyboard.cs  Win32Mouse.cs  Win32OpenGL.cs  Win32OpenGLDevice.cs  Win32Synchronization.cs  Win32SynchronizationContext.cs  Win32Video.cs  Win32Window.cs  ZweigEngine.Native.Win32.csproj
ZweigEngine.Platform.SDL/: ISDLEventListener.cs  SDLDesktop.cs  SDLLocalVariables.cs  SDLPlatformBase.cs  ZweigEngine.Platform.SDL.csproj
src/: application.cpp  application.h  com_shared.h  common.cpp  common.h  ent_shared.h  entities.cpp  entities.h  platform.cpp  platform.h  platform_sdl.cpp  screen.cpp  screen.h  snd_shared.h  sys_shared.h  ui_shared.h  vid_shared.h  video.cpp  video.h
(+616 files in other folders)
